# adexplorer-django-apps

./: MANIFEST.in  README.md  apps.py  setup.cfg
migrations/: 0004_pubctd.py  0005_auto_20210609_1611.py
pubad/: .gitignore  apps.py  models.py  urls.py  views.py
pubad/migrations/: 0001_initial.py  0002_genealiasespub.py  0003_pubinfo_year_count.py  0006_geneinfo.py  0007_load_geneinfo.py  0008_load_pubad_all_data.py
pubad/static/pubad/: main.css
pubad/static/pubad/js/: co_genes_lolipop_plot.js  horizontal_barchart.js  pub_barbhart.js  pub_by_year_plot.js
pubad/templates/pubad/: base.html  index.html
pubad/templatetags/: remove_space.py
pubad/tests/: settings.py
static/pubad/js/: co_genes_lolipop_plot.js
templates/pubad/: index.html
