[metadata]
name = adexplorer-django-apps
version = 0.1.0
description = ADExplorer Django Apps

[options]
packages = find:
# Include data files as specified in MANIFEST.in
include_package_data = True
install_requires =
    django >= 2.2
    airavata-django-portal-sdk

[options.entry_points]
airavata.djangoapp =
    adexplorer_django_apps = adexplorer_django_apps.apps:Adexplorer-Django-AppsConfig
