[metadata]
name = adexplorer-django-apps
version = 0.1.0
description = ADExplorer Django Apps

[options]
packages = find:
# Include data files as specified in MANIFEST.in
include_package_data = True
install_requires =
    django >= 3.2
    airavata-django-portal-sdk
    pandas
    wordcloud
    django-pandas

[options.entry_points]
airavata.djangoapp =
    pubad = pubad.apps:PubadConfig
